--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,11 @@ name = "chron_os"
 version = "0.1.0"
 edition = "2018"
 
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
+#[profile.dev]
+#panic = "abort"
+#
+#[profile.release]
+#panic = "abort"
 
 [target.'cfg(target_os = "linux")']
 rustflags = ["-C", "link-arg=-nostartfiles"]
@@ -18,10 +18,16 @@ rustflags = ["-C", "link-args=/ENTRY:_start /SUBSYSTEM:console"]
 [target.'cfg(target_os = "macos")']
 rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]
 
+[package.metadata.bootimage]
+test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
+test-success-exit-code = 33         # (0x10 << 1) | 1
+
+
 [dependencies]
 bootloader = "0.9"
 volatile = "0.2.6"
 spin = "0.5.2"
+x86_64 = "0.14.2"
 
 [dependencies.lazy_static]
 version = "1.0"
