--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,11 @@ rustflags = ["-C", "link-args=/ENTRY:_start /SUBSYSTEM:console"]
 rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]
 
 [package.metadata.bootimage]
-test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
+test-timeout = 10          # (in seconds)
+test-args = [
+    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
+    "-display", "none"
+]
 test-success-exit-code = 33         # (0x10 << 1) | 1
 
 
@@ -28,6 +32,7 @@ bootloader = "0.9"
 volatile = "0.2.6"
 spin = "0.5.2"
 x86_64 = "0.14.2"
+uart_16550 = "0.2.0"
 
 [dependencies.lazy_static]
 version = "1.0"
