--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ test-args = [
 ]
 test-success-exit-code = 33         # (0x10 << 1) | 1
 
+[[test]]
+name = "should_panic"
+harness = false
 
 [dependencies]
 bootloader = "0.9"
@@ -37,3 +40,4 @@ uart_16550 = "0.2.0"
 [dependencies.lazy_static]
 version = "1.0"
 features = ["spin_no_std"]
+
